--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+	<p style="background-color:black; color:white;">First paragraph</p>
+	<p>second paragrpah</p>
+	<p>Third paragraph</p>
+			</div>
+		
+
+			<ul style="width:50%; padding:10px;">
+		<li style="background-color:white;  font-size:22px;">First Item</li>
+		<li style="background-color:gray;">Second Item</li>
+		<li  style="background-color:pink; ">Third Item</li>
+		<li  style="background-color:gray; ">Fourth Item</li>
+		<li  style="background-color:white; font-size:22px;">Fifth Item</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
