--- a/main.html
+++ b/main.html
@@ -8,12 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
-	<p style="background-color:black; color:white;">First paragraph</p>
-	<p>second paragrpah</p>
-	<p>Third paragraph</p>
-			</div>
-		
+	<article> 
+ <p>This is the first paragraph with white text on a black background.</p>
+  <p>This is the second paragraph with standard text color.</p>
+  <p>This is the third paragraph with red text.</p>
+		 </article>
 
 			<ul style="width:50%; padding:10px;">
 		<li style="background-color:white;  font-size:22px;">First Item</li>
